# aeroplast

./: LICENSE  Pipfile  README.md  aeroplast.py  pyproject.toml  test_aeroplast.py
aeroplast/: __main__.py  cli.py  images.py  paths.py
tests/: conftest.py  test_aeroplast.py  test_cli.py  test_images.py
