[tool.poetry]
name = "aeroplast"
version = "0.1.0"
description = "Transparent PNG conversion."
authors = ["kk6 <hiro.ashiya@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/kk6/aeroplast"
repository = "https://github.com/kk6/aeroplast"
keywords = ["image", "console"]
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"
pillow = "^5.3"
fire = "^0.1.3"
logzero = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^4.0"

[tool.poetry.scripts]
aeroplast = "aeroplast.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
